# PaymentSystem

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: codeql.yml  main.yaml
Tests/: AccountTests.cpp  AccountTests.hpp
src/AccountSystem/: Account.cpp  Account.hpp
